Remove ZuluVersionInterface.java